	deleted:    ZGame/3dsMax/FBX/importfbx/parsematerial.h
	deleted:    ZGame/3dsMax/FBX/importfbx/parsemesh.cpp
	deleted:    ZGame/3dsMax/FBX/importfbx/parsemesh.h
	deleted:    ZGame/3dsMax/FBX/importfbx/parsemisc.cpp
	deleted:    ZGame/3dsMax/FBX/importfbx/parsemisc.h
	deleted:    ZGame/3dsMax/FBX/importfbx/stdafx.cpp
	deleted:    ZGame/3dsMax/FBX/importfbx/stdafx.h
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/SDKMeshFileWriter2012.vcxproj
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/SDKMeshFileWriter2012.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/SDKMeshFileWriter2013.vcxproj
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/SDKMeshFileWriter2013.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/SDKMeshFileWriter2015.vcxproj
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/SDKMeshFileWriter2015.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/sdkmesh.h
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/sdkmeshfilewriter.cpp
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/sdkmeshfilewriter.h
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/stdafx.cpp
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/stdafx.h
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2012.vcxproj
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2012.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2013.vcxproj
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2013.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2015.vcxproj
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2015.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/stdafx.cpp
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/stdafx.h
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/xatgfilewriter.cpp
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/xatgfilewriter.h
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/xmlwriter.cpp
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/xmlwriter.h
