@@ -5678,3 +5678,15 @@ Changes not staged for commit:
 	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/xmlwriter.cpp
 	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/xmlwriter.h
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/11/24.15_16_00.97.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   History.txt
+	modified:   ZGame/3dsMax/FBX/contentexporter/exportobjects/exportscene.cpp
+	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/ParseAnimation.cpp
+
